# src/routes/user.ts
@@ -4,6 +4,7 @@ import userController from '@/controllers/userController';
 import validateParamsObjectIds from '@/middlewares/validateParamsObjectIds';
 import validateRequest from '@/middlewares/validateRequest';
 import { updateUserRequestSchema } from '@/validateSchema/updateUserRequest';
+import orderController from '@/controllers/orderController';
 
 const router = Router();
 
@@ -378,6 +379,61 @@ router.post(
   */
   validateParamsObjectIds(['userId']),
   userController.subscribeUser
+);
+
+router.get(
+  '/orders',
+  /* 
+    #swagger.security = [{'Bearer': []}]
+    #swagger.tags = ['User']
+    #swagger.description = 'Get user orders.'
+    #swagger.responses[200] = {
+      description: 'User orders',
+      schema: {
+        statusCode: 0,
+        message: 'success',
+        data: [
+          {
+            orderNo: '20240702_4pji5d',
+            payment: null,
+            isSuccess: false
+          },
+          {
+            orderNo: '20240705_mb2d4d',
+            payment: {
+                amount: 60,
+                transactionId: '24070516431407295',
+                paymentIP: '123.194.159.15',
+                escrowBank: 'HNCB',
+                paymentType: 'WEBATM',
+                account5Code: '12345',
+                payBankCode: '809',
+                orderId: '6687b2199dff4ff495c7606d',
+                createdAt: '2024-07-05T08:43:15.456Z'
+            },
+            seller" {
+              id: '667b20205e32661530d68501',
+              profile: {
+                displayName: 'Journey Bites',
+                avatarImageUrl: 'https://journey-bites.com/avatar.jpg',
+                bio: 'Travel blogger',
+              }
+            },
+            isSuccess: true,
+          },
+        ]
+      }
+    }
+    #swagger.responses[401] = {
+      description: 'Unauthorized',
+      schema: { statusCode: 2003, message: 'Permission denied' }
+    }
+    #swagger.responses[500] = {
+      description: 'Internal server error',
+      schema: { statusCode: 9999, message: 'Error while getting user orders' }
+    }
+  */
+  orderController.getOrders
 );
 
 router.get(
